Work towards wardrobe fixes for 1.19.3